feat: enhance AlcoholTestFactory and RatingTestFactory with new persist methods for Region, Distillery, and Alcohol entities
Signed-off-by: hgkim <hgkim@openerd.com>