@@ -8,16 +8,13 @@ import app.bottlenote.alcohols.dto.response.AlcoholSearchResponse;
 import app.bottlenote.alcohols.fixture.AlcoholTestFactory;
 import app.bottlenote.global.data.response.GlobalResponse;
 import app.bottlenote.rating.fixture.RatingTestFactory;
-import app.bottlenote.user.constant.SocialType;
 import app.bottlenote.user.domain.User;
-import app.bottlenote.user.dto.request.OauthRequest;
-import app.bottlenote.user.dto.response.TokenItem;
+import app.bottlenote.user.fixture.UserTestFactory;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.annotation.DirtiesContext;
-import org.springframework.test.context.jdbc.Sql;
 import org.springframework.test.web.servlet.MvcResult;
 
 import java.nio.charset.StandardCharsets;
@@ -37,18 +34,18 @@ import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.
 class AlcoholQueryIntegrationTest extends IntegrationTestSupport {
 
 	@Autowired
-	AlcoholQueryRepository alcoholQueryRepository;
+	private AlcoholQueryRepository alcoholQueryRepository;
 	@Autowired
-	AlcoholTestFactory alcoholTestFactory;
+	private AlcoholTestFactory alcoholTestFactory;
 	@Autowired
-	RatingTestFactory ratingTestFactory;
+	private UserTestFactory userTestFactory;
+	@Autowired
+	private RatingTestFactory ratingTestFactory;
+	@Autowired
+	private jakarta.persistence.EntityManager em;
 
-	@Sql(scripts = {
-			"/init-script/init-user.sql",
-			"/init-script/init-alcohol.sql"
-	})
-	@DisplayName("알코올 목록조회를 할 수 있다.")
 	@Test
+	@DisplayName("알코올 목록조회를 할 수 있다.")
 	void test_1() throws Exception {
 
 		MvcResult result = mockMvc.perform(get("/api/v1/alcohols/search")
@@ -67,13 +64,8 @@ class AlcoholQueryIntegrationTest extends IntegrationTestSupport {
 		assertEquals(alcohols.size(), alcoholSearchResponse.getTotalCount());
 	}
 
-	@Sql(scripts = {
-			"/init-script/init-user.sql",
-			"/init-script/init-alcohol.sql",
-			"/init-script/init-review.sql"
-	})
-	@DisplayName("알코올 상세 조회를 할 수 있다.")
 	@Test
+	@DisplayName("알코올 상세 조회를 할 수 있다.")
 	void test_2() throws Exception {
 		final Long alcoholId = 1L;
 		MvcResult result = mockMvc.perform(get("/api/v1/alcohols/{alcoholId}", alcoholId)
@@ -92,25 +84,28 @@ class AlcoholQueryIntegrationTest extends IntegrationTestSupport {
 		assertNotNull(alcoholDetail.friendsInfo());
 	}
 
-	@DisplayName("알코올 상세 조회 시 해당 알코올을 마셔본 팔로잉 유저의 정보를 조회할 수 있다.")
 	@Test
+	@DisplayName("알코올 상세 조회 시 해당 알콤올을 마셔본 팔로잉 유저의 정보를 조회할 수 있다.")
 	void test_3() throws Exception {
 		// given
-		final String userEmail = "test1@example.com";
-		final List<SocialType> userSocialType = List.of(SocialType.KAKAO);
-		Alcohol alcohol = alcoholTestFactory.createAlcohol();
+		Alcohol alcohol = alcoholTestFactory.persistAlcohol();
 		final Long alcoholId = alcohol.getId();
-		User user1 = alcoholTestFactory.createUser(1L, userEmail, "test1");
-		User user2 = alcoholTestFactory.createUser(2L, "test@example.com", "test2");
-		alcoholTestFactory.createFollow(user1, user2);
-		ratingTestFactory.createRating(user2, alcohol, 3);
-		OauthRequest oauthRequest = new OauthRequest(userEmail, null, userSocialType.get(0), null, null);
-		TokenItem token = getToken(oauthRequest);
+
+		String tokenString = getToken();
+		Long currentUserId = getTokenUserId();
+		User follower = userTestFactory.persistUser("follower@example.com", "follower");
+
+		userTestFactory.persistFollow(currentUserId, follower.getId());
+		userTestFactory.persistFollow(follower.getId(), currentUserId);
+		ratingTestFactory.persistRating(currentUserId, alcohol.getId(), 3);
+		ratingTestFactory.persistRating(follower.getId(), alcohol.getId(), 4);
+
 		MvcResult result = mockMvc.perform(get("/api/v1/alcohols/{alcoholId}", alcoholId)
 						.contentType(APPLICATION_JSON)
-						.header("Authorization", "Bearer " + token.accessToken())
+						.header("Authorization", "Bearer " + tokenString)
 						.with(csrf())
 				)
+				.andDo(print())
 				.andReturn();
 		String responseString = result.getResponse().getContentAsString(StandardCharsets.UTF_8);
 		GlobalResponse response = mapper.readValue(responseString, GlobalResponse.class);
@@ -119,6 +114,6 @@ class AlcoholQueryIntegrationTest extends IntegrationTestSupport {
 		// then
 		assertNotNull(alcoholDetail.friendsInfo());
 		assertEquals(1, alcoholDetail.friendsInfo().getFollowerCount());
-		assertEquals(user2.getId(), alcoholDetail.friendsInfo().getFriends().get(0).userId());
+		assertEquals(follower.getId(), alcoholDetail.friendsInfo().getFriends().getFirst().userId());
 	}
 }
